<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rrvq.listacompras.sesion.Registrar">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/registrate"
        android:textColor="@color/colorBlanco"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                android:textColor="@color/colorPrimary" />

            <!--<EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:ems="13"
        android:inputType="textEmailAddress" />-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etEmailL"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:hint="@string/email"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLength="70"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/datos"
                android:textColor="@color/colorPrimary" />

            <!--<EditText
        android:id="@+id/etNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="13"
        android:hint="@string/nombre"
        android:inputType="text" />-->

            <!--<EditText
        android:id="@+id/etApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="13"
        android:hint="@string/apellido"
        android:inputType="text" />-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etNombreL"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:hint="@string/nombre"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="50"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etApellidoL"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:hint="@string/apellido"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etApellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="50"/>

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passminimo"
                android:textColor="@color/colorPrimary" />

            <!--<EditText
        android:id="@+id/etPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="13"
        android:hint="@string/password"
        android:inputType="textPassword" />-->

            <!--<EditText
        android:id="@+id/etPass2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="13"
        android:hint="@string/repitapass"
        android:inputType="textPassword" />-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPassL"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:hint="@string/pass"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="50"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPass2L"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:hint="@string/repitapass"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPass2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="50"/>

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/tvOlvidoPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preguntasdeseguridad"
                android:textColor="@color/colorPrimary" />

            <!--<EditText
        android:id="@+id/etPregunta1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="13"
        android:hint="@string/pregunta1"
        android:inputType="text" />-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPregunta1L"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:hint="@string/pregunta1"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPregunta1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="50"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--<EditText
        android:id="@+id/etRespuest1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="13"
        android:hint="@string/respuesta1"
        android:inputType="text" />-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etRespuest1L"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:hint="@string/respuesta1"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRespuest1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="50"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--<EditText
        android:id="@+id/etPregunta2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="13"
        android:hint="@string/pregunta2"
        android:inputType="text"/>-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPregunta2L"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:hint="@string/pregunta2"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPregunta2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="50"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--<EditText
                android:id="@+id/etResuesta2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="13"
                android:hint="@string/respuest2"
                android:inputType="text" />-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etResuesta2L"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:hint="@string/respuest2"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etResuesta2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="50"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/boton_style_primary"
                android:paddingHorizontal="20dp"
                android:text="@string/registrar"
                android:textColor="@color/colorBlanco"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etResuesta2" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
