<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/imgIcono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person_32"
            android:layout_marginHorizontal="10dp"
            android:contentDescription="@string/descripcion"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNombreAmigo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/nombre"
                android:padding="10dp"/>
            <TextView
                android:id="@+id/tvEmailAmigo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/email"/>

        </LinearLayout>


        <!--<ImageButton
            android:id="@+id/ibAmigoAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person_add_24"
            android:background="?attr/selectableItemBackground"
            android:padding="10dp"
            android:contentDescription="@string/descripcion" />-->

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearDivisor"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorGrisClaro"
        android:paddingHorizontal="5dp"
        android:orientation="horizontal"/>


</LinearLayout>